@@ -1,4 +1,5 @@
 #!/bin/bash
+su - winery
 mkdir -p .winery
 dockerize -template winery.yml.tpl:.winery/winery.yml 
 if [ -d "${WINERY_REPOSITORY_PATH}" ] && [ "$(ls -A ${WINERY_REPOSITORY_PATH})" ]; then 
@@ -11,7 +12,7 @@ else
 	fi 
 fi 
 cd ${WINERY_REPOSITORY_PATH} 
-export CATALINA_OPTS="-Djava.security.egd=file:/dev/./urandom -Xms512m -Xmx${WINERY_HEAP_MAX} -XX:MaxPermSize=256m"
+export CATALINA_OPTS="-Djava.security.egd=file:/dev/./urandom -Xms512m -Xmx${WINERY_HEAP_MAX}"
 if [ ! "x${WINERY_JMX_ENABLED}" = "x" ]; then 
 	export CATALINA_OPTS="${CATALINA_OPTS} -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.port=9010 -Dcom.sun.management.jmxremote.rmi.port=9010 -Djava.rmi.server.hostname=0.0.0.0 -Dcom.sun.management.jmxremote.ssl=false" 
 fi
